# templates.python

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  main.py  pyproject.toml  pyrightconfig.strict.json
.codex/commands/: summarize.md
.cursor/rules/: general.mdc
.github/workflows/: ci.yml
src/: main.py
tests/: test_settings.py
utils/: settings.py
