[project]
name = "templates.python"
version = "0.3.0"
description = "A boilerplate for Python projects."
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Andy Pai", email = "andy@r2pi.co"},
]

dependencies = [
    "pydantic>=2.11.10",
    "pydantic-settings>=2.11.0",
    "structlog>=25.4.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.30.1",
    "pre-commit>=4.3.0",
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "pytest-cov>=6.2.1",
    "ruff>=0.13.3",
]

ml = [
  "torch>=2.7.1",
  "scikit-learn>=1.7.1",
  "mlflow>=3.1.1",
  "matplotlib>=3.10.6",
  "numpy>=2.3.3",
  "pandas>=2.3.3",
  "seaborn>=0.13.2",
]

[tool.ruff]
line-length = 88
indent-width = 2

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # ruff-specific rules
]
ignore = ["E501", "B008", "C901", "N812", "N803", "N806"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-ra"]
pythonpath = ["."]

[tool.pyright]
include = ["*.py", "tests"]
exclude = ["**/__pycache__"]
typeCheckingMode = "off"

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.13"
pythonPlatform = "All"
